fix letter spacing error

--- a/zawgyi.css
+++ b/zawgyi.css
@@ -30,6 +30,9 @@
 .i_am_uni_verified{
     font-family: 'YoeYar-One'
 }
+._c_o_nvert_{
+    letter-spacing: normal !important;
+}
 /* CSS copied from https://github.com/CodeSeven/toastr */
 
 #mua-conversion-warning-container {
